Fix placeholder spacing

--- a/src/blocks/menu/menu-item/styles/editor.scss
+++ b/src/blocks/menu/menu-item/styles/editor.scss
@@ -4,7 +4,7 @@
 	padding: 0 !important;
 
 	.editor-media-placeholder {
-		margin: 0 0 1.65em;
+		margin: 0 0 1.65em !important;
 		min-height: 264px;
 		outline: 1px dashed $dark-gray-150;
 		padding: 100% 0 0 0;
